--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,17 +25,6 @@ aliases:
 version: 2.1
 
 jobs:
-  test:
-    executor: node
-    steps:
-      - checkout
-      - <<: *restore_cache
-      - <<: *install_node_modules
-      - <<: *save_cache
-      - run:
-          name: Test
-          command: yarn test
-
   build:
     executor: node
     steps:
@@ -44,11 +33,11 @@ jobs:
       - <<: *install_node_modules
       - run:
           name: Build
-          command: yarn build
+          command: npm run build
       - persist_to_workspace:
           root: ./
           paths:
-            - public
+            - build
 
   deploy:
     executor: node
@@ -63,7 +52,7 @@ jobs:
           command: sudo npm install --unsafe-perm=true -g --silent netlify-cli
       - run: 
           name: Deploy to Netlify
-          command: netlify deploy --dir=./public -p
+          command: netlify deploy --dir=./build -p
 
 workflows:
   version: 2
