--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,17 @@ aliases:
 version: 2.1
 
 jobs:
+  test:
+    executor: node
+    steps:
+      - checkout
+      - <<: *restore_cache
+      - <<: *install_node_modules
+      - <<: *save_cache
+      - run:
+          name: Test
+          command: yarn test
+
   build:
     executor: node
     steps:
@@ -58,7 +69,14 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
+      - test:
+          filters:
+            branches:
+              ignore:
+                - gh-pages
       - build:
+          requires:
+            - test
       - deploy:
           requires:
             - build
