--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,9 +61,17 @@ jobs:
       - run:
           name: Install netlify-cli
           command: sudo npm install --unsafe-perm=true -g --silent netlify-cli
-      - run: 
+      - run:
           name: Deploy to Netlify
           command: netlify deploy --dir=./build -p
+
+  notifications:
+    email:
+      recipients:
+        - datnguyen25082000@gmail.com
+        - datquadep25082000@gmail.com
+      on_success: always # default: change
+      on_failure: never # default: always
 
 workflows:
   version: 2
@@ -83,3 +91,7 @@ workflows:
           filters:
             branches:
               only: master
+
+      - notifications:
+        requires:
+          - deploy
