--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build project:
   image: node:15
   script:
     - npm install
-    - npm build
+    - npm run build
   artifacts:
     paths:
       - build/
