--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ workflows:
           requires:
             - test
       - deploy:
+          type: approval
           requires:
             - build
           filters:
