--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,8 @@ jobs:
           paths:
             - build
 
+  request-testing:
+
   deploy:
     executor: node
     steps:
@@ -68,8 +70,11 @@ workflows:
       - build:
           requires:
             - test
-      - deploy:
+      - request-testing:
           type: approval
+          requires:
+            - build
+      - deploy:
           requires:
             - build
           filters:
